empathy_connection_can_*_personas: check if connection is connected

https://bugzilla.gnome.org/show_bug.cgi?id=657266